prometheus-ingress/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: prometheus-operated
  namespace: prometheus
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: home-lab
  to:
  - group: ""
    kind: Service
