prometheus-ingress/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: prometheus-operatred
spec:
  parentRefs:
    - name: home-lab
  hostnames:
    - "logging.home.lab"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-operated
          namespace: prometheus
          port: 9090
          weight: 1
